# stmdency

./: .flake8  .pre-commit-config.yaml  .ruff.toml  LICENSE  README.md  RELEASE.md  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yaml  pypi.yaml
docs/: conf.py  index.rst
src/stmdency/: constants.py  extractor.py  visitor.py
src/stmdency/models/: node.py
src/stmdency/visitors/: assign.py  base.py  function_def.py
tests/: testing.py
tests/extractor/: test_assign.py  test_function.py  test_import.py  test_module_class.py
