[metadata]
name = stadency
version = attr: stadency.__version__
url = https://github.com/zhongjiajie/stadency
description = A library extracting dependencies between statements in Python program.
long_description = file: README.md
long_description_content_type = text/markdown
author = Jay Chung
author_email = zhongjiajie955@gmail.com
license = Apache License 2.0
license_files = 
    file: LICENSE
keywords =
    all
# complete classifier list: http://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 1 - Planning
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Environment :: Console
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Source = https://github.com/zhongjiajie/stadency
    Issue Tracker = https://github.com/zhongjiajie/stadency/issues
    Documentation = https://stadency.readthedocs.io
    Changelog = https://github.com/zhongjiajie/stadency/releases

[options]
python_requires = >=3.6
include_package_data = True
zip_safe = true
platforms = any
package_dir =
    =src
packages =
    find:
install_requires =
    libcst
#    PyYaml

[options.packages.find]
where=src

[options.package_data]
stadency =
  rules/**/*.yaml

[options.extras_require]
dev =
    # style
    black>=22.8
    flake8>=4.0
    flake8-docstrings>=1.6
    flake8-black>=0.2
    isort>=5.10
    autoflake>=1.4
    # test
    pytest>=6.2
    pytest-cov>=3.0
    # docs
    sphinx>=4.3
    sphinx_rtd_theme>=1.0
    sphinx-copybutton>=0.4.0
    sphinx-argparse>=0.3.2
