[metadata]
name = stmdency
version = attr: stmdency.__version__
url = https://github.com/zhongjiajie/stmdency
description = A library extracting dependencies between statements in Python program.
long_description = file: README.md
long_description_content_type = text/markdown
author = Jay Chung
author_email = zhongjiajie955@gmail.com
license = Apache License 2.0
license_files = 
    file: LICENSE
keywords =
    all
# complete classifier list: http://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Environment :: Console
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Source = https://github.com/zhongjiajie/stmdency
    Issue Tracker = https://github.com/zhongjiajie/stmdency/issues
    Documentation = https://stmdency.readthedocs.io
    Changelog = https://github.com/zhongjiajie/stmdency/releases

[options]
python_requires = >=3.8
include_package_data = True
zip_safe = true
platforms = any
package_dir =
    =src
packages =
    find:
install_requires =
    libcst
#    PyYaml

[options.packages.find]
where=src

[options.package_data]
stmdency =
  rules/**/*.yaml

[options.extras_require]
dev =
    # style
    black>=22.8
    ruff>=0.1
    # test
    pytest>=6.2
    pytest-cov>=3.0
    # docs
    sphinx>=4.3
    sphinx_rtd_theme>=1.0
    sphinx-copybutton>=0.4.0
    sphinx-argparse>=0.3.2

[coverage:run]
command_line = -m pytest

[coverage:report]
# Don’t report files that are 100% covered
skip_covered = True
show_missing = True
precision = 2

